# RulateTUIReader

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
requests/: book.http  filters.http  user.http
src/: app.py  config.py
src/api/: api.py  base.py  book.py  user.py
src/core/: exceptions.py  keyring.py
src/core/interfaces/: book.py  book_repo.py  user.py  user_repo.py
src/models/: book.py  bookmark.py  chapter.py  response.py  user.py
src/services/: app.py  book.py  image.py  keyring.py  user.py
src/types/: book.py  chapter.py  response.py  user.py
src/ui/: style.tcss  ui.py
src/ui/screens/: base.py  bookmarks.py  chapter.py  login.py
src/ui/screens/modals/: chapter_list.py  login.py
src/ui/widgets/: bookmark.py  chapter.py  user.py
