[project]
name = "tuireader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "keyring>=25.7.0",
    "markdownify>=1.2.2",
    "pycryptodome>=3.23.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "textual>=8.2.7",
    "textual-image>=0.12.0",
]
